navbar items align fixed

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -58,7 +58,7 @@
         top: 80px;
         left: -120%;
         transition: all 0.5s;
-        padding: 0px 20px 10px 5px;
+        padding: 0px 20px 35px 0px;
         overflow: hidden;
       }
       nav ul li {
@@ -66,8 +66,7 @@
         line-height: 30px;
       }
       nav ul li a {
-        margin-left: -3rem;
-        font-weight: 700;
+        font-weight: 600;
         font-size: 18px;
         color: rgb(77, 72, 72);
       }
